WIP using List.of instead of Arrays.asList and assertThat on cars not cars.size()